# HousePanel

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
firmware/: DEVENV.md
firmware/housepanel-giga/: command_parser.cpp  command_parser.h  config.h  display.cpp  display.h  housepanel-giga.ino  montserrat_96.c  secrets.h.example  wifi_manager.cpp  wifi_manager.h  ws_client.cpp  ws_client.h
k8s/: README.txt  aggregator.yaml  calendar-poller.yaml  configmap.yaml  namespace.yaml  ring-integration.yaml  secrets-google-adc.yaml  secrets-ring.yaml  secrets-webhook.yaml  serviceaccounts.yaml  sysmon-poller.yaml  transport-adapter.yaml  weather-poller.yaml  webhook-receiver.yaml
services/aggregator/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/aggregator/src/aggregator/: dedup.py  dispatch_worker.py  drain.py  main.py  queue.py  router.py  routes.py  state.py  transport_client.py
services/aggregator/tests/: test_dedup.py  test_dispatch_worker.py  test_drain.py  test_queue.py  test_router.py
services/calendar-poller/: Dockerfile  pyproject.toml  requirements.txt
services/calendar-poller/src/calendar_poller/: calendar_client.py  main.py  poller.py
services/calendar-poller/tests/: conftest.py  test_calendar_client.py  test_poller.py
services/ring-integration/: Dockerfile  pyproject.toml  requirements.txt
services/ring-integration/scripts/: get_token.py
services/ring-integration/src/ring_integration/: client.py  main.py  normalizer.py  token_manager.py
services/ring-integration/tests/: test_forwarder.py  test_normalizer.py
services/shared/: pyproject.toml
services/shared/shared/: logging.py  models.py
services/shared/tests/: test_models.py
services/sysmon-poller/: Dockerfile  pyproject.toml  requirements.txt
services/sysmon-poller/src/sysmon_poller/: main.py
services/transport-adapter/: Dockerfile  pyproject.toml  requirements.txt
services/transport-adapter/src/transport_adapter/: main.py  routes.py  state.py  state_refresh.py  stream_decompose.py  ws_handler.py  ws_write_loop.py
services/transport-adapter/tests/: conftest.py  test_command_routing.py  test_hello_frame.py  test_write_loop.py
services/weather-poller/: Dockerfile  pyproject.toml  requirements.txt
services/weather-poller/src/weather_poller/: adapter.py  main.py  poller.py
services/weather-poller/src/weather_poller/adapters/: google.py  openweathermap.py  wttr_in.py
services/weather-poller/tests/: test_adapter_protocol.py  test_adapters.py  test_poller.py
services/webhook-receiver/: Dockerfile  pyproject.toml
services/webhook-receiver/src/webhook_receiver/: auth.py  forwarder.py  main.py  routes.py  schemas.py
services/webhook-receiver/tests/: test_auth.py  test_routes.py
spec/: context.md  design.md  interfaces.json  module-boundaries.json  post-execution-log.md  requirements.md  tasks.md
spec/schemas/: README.txt  camera-webhook-v1.json  system-alert-webhook-v1.json
