[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "calendar-poller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.130",
    "google-auth>=2.29",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
