[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ring-integration"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ring_doorbell[listen]>=0.9",
    "httpx>=0.27",
    "kubernetes>=29",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
