[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sysmon-poller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]
