[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "transport-adapter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
