[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-poller"
version = "0.1.6"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.130",
    "google-auth>=2.29",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
